cabal-version:       >=1.10

name:                MVP
version:             0.1.0.0
author:              Michalis Pardalos
maintainer:          m.pardalos@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable MVP
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.12 && <4.15
    , random == 1.2.*
    , directory == 1.3.*
  -- hs-source-dirs:
  default-language:    Haskell2010
