cabal-version:       >=1.10

name:                MVP
version:             0.1.0.0
author:              Michalis Pardalos
maintainer:          m.pardalos@gmail.com
build-type:          Simple

executable fuzz-sat
  main-is:             Main.hs
  build-depends:
    base >=4.12 && <4.15
    , random == 1.2.*
    , directory == 1.3.*
  default-language:    Haskell2010
